Bug Fix: Build City and Settlement Buttons were Invisible, but clickable.

--- a/src/componentes/gameboard/gameboard.css
+++ b/src/componentes/gameboard/gameboard.css
@@ -3,8 +3,6 @@
     /*height: 88.095%;*/
     min-height: 88.095vw;
     /*height: auto;*/
-    border-top: 1px solid white;
-    border-bottom: 1px solid white;
     background-color: #3498db;
 }
 
@@ -99,10 +97,13 @@
 
 .hideBuildSettlementButton {
   display: none;
+  pointer-events: none;
 }
 
 .hideBuildCityButton {
   display: none;
+  visibility: hidden;
+  pointer-events: none;
 }
 
 .roadNodeBuildable {
